--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<div class="col-md-8 header-right">
 					<h2>Hello</h2>
 					<h1>I'm Chun Zhou </h1>
-					<h6>Data Enthusiast / Coder / Analyst</h6>
+					<h6>Data Enthusiast · Coder · Analyst</h6>
 					<ul class="address">
 						<li>
 							<ul class="address-text">
@@ -299,9 +299,8 @@
 				<div id="horizontalTab" style="display: block; width: 100%; margin: 0px;">
 					<ul class="resp-tabs-list wow fadeInUp animated" data-wow-delay=".7s">
 						<li class="resp-tab-item"><span>All</span></li>
-						<li class="resp-tab-item"><span>Software</span></li>
-						<li class="resp-tab-item"><span>Data</span></li>
-						<li class="resp-tab-item"><span>FinTech</span></li>					
+						<li class="resp-tab-item"><span>Data Analytics</span></li>
+						<li class="resp-tab-item"><span>Software Engineering</span></li>					
 					</ul>	
 					<div class="clearfix"> </div>	
 					<div class="resp-tabs-container">
@@ -309,99 +308,77 @@
 							<div class="tab_img">
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g1.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+										<a href="images/g1.jpg" class="swipebox" title="Data Visualization in R">
 											<img src="images/g1.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>Sarah likes to watch clouds. She's quite depressed.</p>
+												<h3>Movie<span> Data</span></h3>
+												<p>Created choropleth map, fecet plots, quantile plots & QQ plots from ANOVA tests, logistic & multinomial regression. </p>
 											</div>
 										</a>	
 									</div>
 								</div>
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid effect-sarah">
-										<a href="images/g2.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+										<a href="images/g2.jpg" class="swipebox" title="Gridwise Data Science Team">
 											<img src="images/g2.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>Sarah likes to watch clouds. She's quite depressed.</p>
+												<h3>Drive<span> Smarter</span></h3>
+												<p>Built predictive models and generated scores from several classification and regression models.</p>
 											</div>
 										</a>	
 									</div>
 								</div>
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g3.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+										<a href="images/g3.jpg" class="swipebox" title="IBM Hackathon">
 											<img src="images/g3.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>Sarah likes to watch clouds. She's quite depressed.</p>
+												<h3>NYC<span> 311 Call</span></h3>
+												<p>Predicted spikes in particular complaints by building time series models in R</p>
 											</div>
 										</a>	
 									</div>
 								</div>
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g4.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+										<a href="images/g4.jpg" class="swipebox" title="REIT">
 											<img src="images/g4.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>Sarah likes to watch clouds. She's quite depressed.</p>
+												<h3>REIT<span> Investment</span></h3>
+												<p>Generated investement strategy from REITs data analysis</p>
 											</div>
 										</a>	
 									</div>
 								</div>
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g5.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+										<a href="images/g5.jpg" class="swipebox" title="Search Engine written in Java">
 											<img src="images/g5.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>Sarah likes to watch clouds. She's quite depressed.</p>
+												<h3>Search Engine<span> Design</span></h3>
+												<p>Designed a full-text search engine that supports queries on different document fields and implemented different retrieval models</p>
 											</div>
 										</a>	
 									</div>
 								</div>
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g6.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+										<a href="images/g6.jpg" class="swipebox" title="TextEditor">
 											<img src="images/g6.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>Sarah likes to watch clouds. She's quite depressed.</p>
+												<h3>TextEditor<span> Design</span></h3>
+												<p>Built & design a TextEditor with advanced functions</p>
 											</div>
 										</a>	
 									</div>
 								</div>
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g7.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+										<a href="images/g7.jpg" class="swipebox" title="Banking System written in Java">
 											<img src="images/g7.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>Sarah likes to watch clouds. She's quite depressed.</p>
-											</div>
-										</a>	
-									</div>
-								</div>
-								<div class="col-md-4 portfolio-grids">
-									<div class="grid">
-										<a href="images/g8.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
-											<img src="images/g8.jpg" alt="" class="img-responsive" />
-											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>Sarah likes to watch clouds. She's quite depressed.</p>
-											</div>
-										</a>	
-									</div>
-								</div>
-								<div class="col-md-4 portfolio-grids">
-									<div class="grid">
-										<a href="images/g9.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
-											<img src="images/g9.jpg" alt="" class="img-responsive" />
-											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>Sarah likes to watch clouds. She's quite depressed.</p>
+												<h3>Banking System<span> Design</span></h3>
+												<p>Built a banking system written in Java to perform basic functions.</p>
 											</div>
 										</a>	
 									</div>
@@ -413,71 +390,71 @@
 							<div class="tab_img">
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g5.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
-											<img src="images/g5.jpg" alt="" class="img-responsive" />
-											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>Sarah likes to watch clouds. She's quite depressed.</p>
-											</div>
-										</a>	
-									</div>
-								</div>
-								<div class="col-md-4 portfolio-grids">
-									<div class="grid">
-										<a href="images/g6.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
-											<img src="images/g6.jpg" alt="" class="img-responsive" />
-											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>Sarah likes to watch clouds. She's quite depressed.</p>
-											</div>
-										</a>	
-									</div>
-								</div>
-								<div class="col-md-4 portfolio-grids">
-									<div class="grid">
-										<a href="images/g7.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
-											<img src="images/g7.jpg" alt="" class="img-responsive" />
-											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>Sarah likes to watch clouds. She's quite depressed.</p>
-											</div>
-										</a>	
-									</div>
-								</div>
-								<div class="clearfix"> </div>
-							</div>
-						</div>
-						<div class="tab-1 resp-tab-content">
-							<div class="tab_img">
-								<div class="col-md-4 portfolio-grids">
-									<div class="grid">
-										<a href="images/g3.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
-											<img src="images/g3.jpg" alt="" class="img-responsive" />
-											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>Sarah likes to watch clouds. She's quite depressed.</p>
-											</div>
-										</a>	
-									</div>
-								</div>
-								<div class="col-md-4 portfolio-grids">
-									<div class="grid">
-										<a href="images/g1.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+										<a href="images/g1.jpg" class="swipebox" title="Data Visualization in R">
 											<img src="images/g1.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>Sarah likes to watch clouds. She's quite depressed.</p>
+												<h3>Movie<span> Data</span></h3>
+												<p>Created choropleth map, fecet plots, quantile plots & QQ plots from ANOVA tests, logistic & multinomial regression. </p>
 											</div>
 										</a>	
 									</div>
 								</div>
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g9.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
-											<img src="images/g9.jpg" alt="" class="img-responsive" />
+										<a href="images/g2.jpg" class="swipebox" title="Gridwise Data Science Team">
+											<img src="images/g2.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>Sarah likes to watch clouds. She's quite depressed.</p>
+												<h3>Drive<span> Smarter</span></h3>
+												<p>Built predictive models and generated scores from several classification and regression models.</p>
+											</div>
+										</a>		
+									</div>
+								</div>
+								<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="images/g3.jpg" class="swipebox" title="IBM Hackathon">
+											<img src="images/g3.jpg" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3>NYC<span> 311 Call</span></h3>
+												<p>Predicted spikes in particular complaints by building time series models in R</p>
+											</div>
+										</a>	
+									</div>
+								</div>
+								<div class="clearfix"> </div>
+							</div>
+							<div class="tab_img">
+								<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="images/g4.jpg" class="swipebox" title="REIT">
+											<img src="images/g4.jpg" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3>REIT<span> Investment</span></h3>
+												<p>Generated investement strategy from REITs data analysis</p>
+											</div>
+										</a>	
+									</div>
+								</div>
+						</div>
+						<div class="tab-1 resp-tab-content">
+								<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="images/g5.jpg" class="swipebox" title="Search Engine written in Java">
+											<img src="images/g5.jpg" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3>Search Engine<span> Design</span></h3>
+												<p>Designed a full-text search engine that supports queries on different document fields and implemented different retrieval models</p>
+											</div>
+										</a>		
+									</div>
+								</div>
+								<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="images/g6.jpg" class="swipebox" title="TextEditor">
+											<img src="images/g6.jpg" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3>TextEditor<span> Design</span></h3>
+												<p>Built & design a TextEditor with advanced functions</p>
 											</div>
 										</a>	
 									</div>
@@ -489,35 +466,13 @@
 							<div class="tab_img">
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g2.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
-											<img src="images/g2.jpg" alt="" class="img-responsive" />
+										<a href="images/g7.jpg" class="swipebox" title="Banking System written in Java">
+											<img src="images/g7.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>Sarah likes to watch clouds. She's quite depressed.</p>
+												<h3>Banking System<span> Design</span></h3>
+												<p>Built a banking system written in Java to perform basic functions.</p>
 											</div>
-										</a>	
-									</div>
-								</div>
-								<div class="col-md-4 portfolio-grids">
-									<div class="grid">
-										<a href="images/g4.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
-											<img src="images/g4.jpg" alt="" class="img-responsive" />
-											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>Sarah likes to watch clouds. She's quite depressed.</p>
-											</div>
-										</a>	
-									</div>
-								</div>
-								<div class="col-md-4 portfolio-grids">
-									<div class="grid">
-										<a href="images/g8.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
-											<img src="images/g8.jpg" alt="" class="img-responsive" />
-											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>Sarah likes to watch clouds. She's quite depressed.</p>
-											</div>
-										</a>	
+										</a>		
 									</div>
 								</div>
 								<div class="clearfix"> </div>
