--- a/index.html
+++ b/index.html
@@ -436,6 +436,7 @@
 									</div>
 								</div>
 						</div>
+					</div>
 						<div class="tab-1 resp-tab-content">
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
