--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 					<h4>2016.6 - 2016.8 </h4>
 				</div>
 				<div class="col-md-6 work-right"> 
-					<h5><span class="glyphicon glyphicon-briefcase"> </span> Data Science Intern  | <a href="gridwise.io">Gridwise</a></h5>
+					<h5><span class="glyphicon glyphicon-briefcase"> </span> Data Science Intern  | <a href="www.gridwise.io">Gridwise</a></h5>
 					<p>Cleaned and preprocessed 10 million+ Uber and Taxi data based in Pittsburgh and NYC, wrote SQL queries in postreSQL in retrieving data from the cloud (AWS) and created a local database. Built predictive models from selected features (time, location, events etc.) and generated scores from several classification and regression models: Linear, Ridge & Lasso Regression, SVM, Neural Networks, Decision Trees, Random Forest. Did cross-validation from training & testing datasets and used clustering to visualize heat map for events in R & Tableau. </p>
 				</div>
 				<div class="clearfix"> </div>
