--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 					<h4>2016.6 - 2016.8 </h4>
 				</div>
 				<div class="col-md-6 work-right"> 
-					<h5><span class="glyphicon glyphicon-briefcase"> </span> Data Science Intern  | <a href="www.gridwise.io">Gridwise</a></h5>
+					<h5><span class="glyphicon glyphicon-briefcase"> </span> Data Science Intern  | Gridwise</h5>
 					<p>Cleaned and preprocessed 10 million+ Uber and Taxi data based in Pittsburgh and NYC, wrote SQL queries in postreSQL in retrieving data from the cloud (AWS) and created a local database. Built predictive models from selected features (time, location, events etc.) and generated scores from several classification and regression models: Linear, Ridge & Lasso Regression, SVM, Neural Networks, Decision Trees, Random Forest. Did cross-validation from training & testing datasets and used clustering to visualize heat map for events in R & Tableau. </p>
 				</div>
 				<div class="clearfix"> </div>
@@ -231,6 +231,29 @@
 					<p>Quant & Portfolio Management </p>
 					<p>Financial Trading </p>
 					<p>International Economics </p>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<div class="work-info"> 
+				<div class="col-md-6 work-right work-right2"> 
+					<h4>Summer Exchange - 2015
+					    <br>Tokyo, Japan</h4>
+				</div>
+				<div class="col-md-6 work-left work-left2"> 
+					<h5> Waseda University <span class="glyphicon glyphicon-education"></span></h5>
+					<p>Japanese Culture & Language Studies:</p>
+					<p>Japanese Religions</p>
+					<p>Japanese Culture & Societies</p>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<div class="col-md-6 work-left"> 
+					<h4>Summer Exchange- 2012
+					<br>Seoul, South Korea</h4>
+				</div>
+				<div class="col-md-6 work-right"> 
+					<h5><span class="glyphicon glyphicon-education"> </span> Kyung Hee University</h5>
+					<p>Korean Language & Culture Studies </p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
